# aiondb

./: .check-adr-allow  .dockerignore  .env.example  .file-limits-allow  .gitignore  .kissconfig  .runtime-crash-lints-allow  AGENT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  deny.toml  docker-compose.build.yml  docker-compose.yml  quickstart.env
.cypher-tck/: Cargo.toml  run_all.sh  run_all_dev.sh
.cypher-tck/src/: gherkin.rs  main.rs
.pg-regress/: Cargo.toml  run_all_safe.sh  run_with_progress.sh
.pg-regress/policy/: compat-p1-gate.json
.pg-regress/src/: create_role_probe.rs  feature_test.rs  interval_format.rs  main.rs  parse_check.rs  pg_regress_strict.rs  session_format.rs  setup.rs  setup_temporal.rs
benchmarks/cross-engine-compare/: Cargo.toml  README.md
benchmarks/cross-engine-compare/src/: main.rs
benchmarks/vector-compare/: Cargo.toml  README.md
benchmarks/vector-compare/src/: main.rs
crates/aiondb-admission/: Cargo.toml
crates/aiondb-admission/src/: cluster_throttle.rs  decay_rate.rs  dist_priority_queue.rs  lib.rs  quota_ledger.rs  sla_priority.rs  tenant_isolation.rs  tenant_throttle.rs
crates/aiondb-admission/tests/: overload_simulation.rs
crates/aiondb-api/: Cargo.toml
crates/aiondb-api/src/: database.rs  engine_surface.rs  lib.rs
crates/aiondb-auth-audit/: Cargo.toml
crates/aiondb-auth-audit/src/: api.rs  lib.rs  tests.rs
crates/aiondb-buffer-pool/: Cargo.toml
crates/aiondb-buffer-pool/src/: disk.rs  disk_btree.rs  disk_btree_maintenance.rs  disk_btree_tests.rs  disk_heap.rs  disk_var_btree.rs  disk_var_btree_tests.rs  eviction.rs  flusher.rs  free_space_map.rs  heap_page.rs  lib.rs  metrics.rs  page.rs  pool.rs  pool_tests.rs
crates/aiondb-catalog-store/: Cargo.toml
crates/aiondb-catalog-store/src/: bootstrap.rs  catalog_wal.rs  lib.rs  reader.rs  recovery.rs  replication.rs  sequences.rs  snapshot.rs  system_tables.rs  test_support.rs  tests.rs  txn.rs  writer.rs
crates/aiondb-cluster/: Cargo.toml
crates/aiondb-cluster/src/: audit_log.rs  backend_pool.rs  bootstrap.rs  bootstrap_token.rs  broadcast_dispatcher.rs  catalog_cache.rs  catalog_propagation.rs  cli_helpers.rs  cluster_diagnostics.rs  cluster_settings.rs  cluster_status.rs  dashboard_summary.rs  descriptor.rs  dist_cache_invalidator.rs  distributed.rs  distributed_barrier.rs  drain.rs  event_log.rs  fault_injector.rs  gossip.rs  gossip_hot_set.rs  gossip_transport.rs  health_probe.rs  health_server.rs  id.rs  idle_conn_reaper.rs  invariants.rs  join_leave.rs  join_rate_limiter.rs  lib.rs  node_orchestrator.rs  partition_detector.rs  plan_cache.rs  pubsub.rs  replicated_catalog.rs  replication.rs  role.rs  schema_fence.rs  schema_migration.rs  schema_version.rs  (+7 more)
crates/aiondb-cluster/tests/: chaos_cluster.rs  full_stack_e2e.rs  jepsen_lite.rs  large_cluster_stress.rs  real_cluster_boot.rs  soak_10node_full_stack.rs  soak_7node.rs
crates/aiondb-dashboard/: Cargo.toml
crates/aiondb-dashboard/src/: auth.rs  lib.rs  main.rs  server.rs
crates/aiondb-dashboard/static/: app.js  index.html  style.css
crates/aiondb-distrib/: Cargo.toml
crates/aiondb-distrib/src/: lib.rs
crates/aiondb-distrib/tests/: compatibility_selftest.rs  full_2pc_flow.rs  full_distrib_example.rs
crates/aiondb-embedded/: Cargo.toml
crates/aiondb-embedded/src/: lib.rs
crates/aiondb-engine/: Cargo.toml
crates/aiondb-engine/src/: auth_audit.rs  builder.rs  catalog_auth.rs  catalog_authorizer.rs  catalog_authorizer_cypher_hybrid.rs  catalog_authorizer_functions.rs  catalog_authorizer_hybrid_exprs.rs  config.rs  engine.rs  lib.rs  params.rs  params_detect.rs  prepared.rs  session.rs  test_support.rs
crates/aiondb-eval/: Cargo.toml
crates/aiondb-eval/src/: async_notify.rs  cancel.rs  coercions.rs  hash_key.rs  lib.rs  plpgsql_compat_cursors.rs  regex_cache.rs
crates/aiondb-executor/: Cargo.toml
crates/aiondb-executor/src/: context.rs  distributed_runtime.rs  lib.rs  result.rs  row_stream.rs
crates/aiondb-fragment-transport/: Cargo.toml
crates/aiondb-fragment-transport/src/: auth.rs  client.rs  lib.rs  protocol.rs  server.rs  tls.rs
crates/aiondb-gpu/: Cargo.toml
crates/aiondb-gpu/src/: cpu.rs  lib.rs  vulkan.rs
crates/aiondb-graph/: Cargo.toml
crates/aiondb-graph-projection/: Cargo.toml
crates/aiondb-graph-projection/benches/: rebuild_elimination.rs
crates/aiondb-graph-projection/src/: lib.rs  persistent.rs  persistent_weighted.rs  shared.rs
crates/aiondb-graph/benches/: algorithms.rs
crates/aiondb-graph/src/: edge.rs  lib.rs  model.rs  node.rs  path.rs  path_tests.rs  pattern.rs  pattern_tests.rs  planner.rs  traversal.rs
crates/aiondb-ha/: Cargo.toml
crates/aiondb-ha/src/: crash_recovery.rs  dist_metric_bridge.rs  dist_semaphore.rs  dist_seq_validator.rs  distrib_metrics.rs  distributed_locks.rs  election.rs  epoch_lease.rs  failover.rs  fencing.rs  health.rs  kv_engine.rs  leader_change_log.rs  leader_heartbeat_emitter.rs  lease_conflict.rs  lib.rs  metrics_server.rs  multi_raft.rs  protocol.rs  pulse_generator.rs  quorum_intersection.rs  (+12 more)
crates/aiondb-optimizer/: Cargo.toml
crates/aiondb-pg-compat/: Cargo.toml
crates/aiondb-pg-syntax/: Cargo.toml
crates/aiondb-pgwire/: Cargo.toml
crates/aiondb-plan/: Cargo.toml
crates/aiondb-planner/: Cargo.toml
crates/aiondb-replication/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: check_adr.rs  check_compat_hooks.rs  check_compat_tasks.rs  check_ignored_tests.rs  check_noops.rs  check_runner_cheats.rs  check_score_contract.rs  check_scratch_suites.rs  checkworld_lite.rs  compat_baseline.rs  compat_burndown.rs  compat_debt_report.rs  compat_mismatch_top.rs  compat_real_score.rs  ecosystem_compat.rs  ecosystem_compat_trend.rs  file_limits.rs  hybrid_fusion_microbench.rs  main.rs  neo4j_analyze.rs  neo4j_bench.rs  neo4j_cypher_scan.rs  neo4j_import.rs  neo4j_verify.rs  pg_compat.rs  qdrant_analyze.rs  runtime_crash_lints.rs  storage_upgrade_matrix.rs  test_matrix.rs  workspace_lints.rs
(+1565 files in other folders)
