[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
aiondb-engine = { path = "../crates/aiondb-engine" }
aiondb-pgwire = { path = "../crates/aiondb-pgwire" }
proc-macro2 = { version = "1", features = ["span-locations"] }
serde.workspace = true
serde_json.workspace = true
syn = { version = "2", features = ["full", "visit"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
