[package]
name = "aiondb-cross-engine-compare"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[profile.release]
lto = false
codegen-units = 16
opt-level = 3
debug = false

[dependencies]
anyhow = "1"
aiondb-embedded = { path = "../../crates/aiondb-embedded" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "3.0.5", default-features = false, features = ["kv-mem", "rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7"
