[package]
name = "aiondb-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aiondb-core = { path = "../aiondb-core" }
aiondb-engine = { path = "../aiondb-engine" }
aiondb-pg-compat = { path = "../aiondb-pg-compat" }

[lints]
workspace = true
