[package]
name = "aiondb-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "aiondb-dashboard"
path = "src/main.rs"

[dependencies]
aiondb-core = { path = "../aiondb-core" }
aiondb-config = { path = "../aiondb-config" }
aiondb-engine = { path = "../aiondb-engine" }
aiondb-pg-compat = { path = "../aiondb-pg-compat" }
axum.workspace = true
base64.workspace = true
getrandom.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
