[package]
name = "aiondb-gpu"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aiondb-core = { path = "../aiondb-core" }
aiondb-vector = { path = "../aiondb-vector" }
rayon = { workspace = true }
tracing = { workspace = true }

# GPU backend (optional — pulled in by "vulkan" feature).
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

[features]
default = []
vulkan = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

# Relax lints for GPU crate — wgpu API patterns don't always
# satisfy pedantic clippy.
[lints.rust]
warnings = "deny"
unsafe_code = "deny"
unused_must_use = "deny"
unused_imports = "deny"
dead_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
