[package]
name = "aiondb-graph-projection"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aiondb-core = { path = "../aiondb-core" }
aiondb-graph-api = { path = "../aiondb-graph-api" }
aiondb-graph = { path = "../aiondb-graph" }
serde = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "rebuild_elimination"
harness = false

[lints]
workspace = true
