[package]
name = "aiondb-pg-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aiondb-core = { path = "../aiondb-core" }
aiondb-eval = { path = "../aiondb-eval" }
aiondb-parser = { path = "../aiondb-parser" }

[lints]
workspace = true
